# Authmatic

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  SUBMISSION.md  architecture.md  demo.md  docker-compose.local.yml  implementation.md  package.json  pnpm-lock.yaml  spec.md
.cursor/: mcp.json
apps/agent/: README.md  main.py  pyproject.toml  requirements.txt
apps/agent/src/: insforge_client.py  loop.py  persist.py  settings.py
apps/agent/src/prompts/: planner.txt
apps/agent/src/tools/: __init__.py  execute.py  persist.py  read_web.py  verify.py
apps/web/: .env.example  README.md  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
assets/fixtures/: README.md  mock_data.json  opsera-scans.json  (+1 more)
db/: 001_authmatic_schema.sql  schema.sql
demo/: README.md  james-wilson.json  lisa-patel.json  maria-overshare.json  pitch-script.md  presentation.html  robert-kim.json  sarah-martinez.json
docs/: CLAUDE-SLIDE-DECK-PROMPT.md  README.md  TEAMMATE-PR.md  architecture.md  healthfirst-portal-handoff.md  insforge.md  team-split-report.md  tigris.md
handoff/: README.md  architecture.md  demo.md  healthfirst-portal-handoff.md  implementation.md  risks.md  spec.md  team-split-report.md
insurance/: README.md
migrations/: 20260531232040_add-pa-submissions.sql  20260531232316_add-pa-submissions-review-cols.sql
mock/: healthfirst-case.json  healthfirst-portal.json
scripts/: gen_demo_pdfs.py  gen_mock_pdfs.py  generate-demo-pdfs.mjs  generate_handoff_pdf.py  reset.sh  seed.py  seed.sh  smoke.sh
(+53 files in other folders)
