[project]
name = "authmatic-agent"
version = "0.1.0"
description = "The 4-verb ReAct loop agent service for Authmatic."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]  # pytest assertions

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
